# zonecast

./: .env.example  .gitignore  PRD.md  README.md  config.yaml  pyproject.toml
examples/: bloom-filter-ANTI-EXAMPLE.md  diffusion-overview-15min.md
prompts/skills/explainer-podcast/: SKILL.md
prompts/skills/explainer-podcast/references/: anti-patterns.md  listener.example.md  style-guide.md  tts-production.md
src/zonecast/: __init__.py  audio.py  cli.py  config.py  llm.py  pipeline.py  prompt.py  schemas.py  text.py  tts.py
src/zonecast/stages/: __init__.py  blueprint.py  generate.py  ingest.py  package.py  plan.py  polish.py  render.py
tests/: test_cli.py  test_config.py  test_generate_polish.py  test_llm.py  test_package.py  test_pipeline.py  test_prompt.py  test_schemas.py  test_stages.py  test_text.py  test_tts_render.py
