[project]
name = "zonecast"
version = "0.1.0"
description = "Personal explainer-podcast generator: topic or paper in, phone-ready MP3 out."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "elevenlabs",
    "typer",
    "pymupdf",
    "pyyaml",
    "pydantic>=2",
    "boto3",
]

[project.scripts]
# cli module is built by the next agent; declaring the entry point now is correct.
zonecast = "zonecast.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zonecast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
